fixed text-align issue

--- a/src/components/SquadRow/SquadRow.scss
+++ b/src/components/SquadRow/SquadRow.scss
@@ -13,7 +13,6 @@
 
 h5 {
   font-size: 1rem;
-  text-align: left;
 }
 
 .col-3 {
@@ -24,7 +23,6 @@ h5 {
 @media (min-width: 640px){
   h5 {
     font-size: 1.25rem;
-    text-align: center;
   }
 
   .col-3 {
